--- a/account/templates/account/index.html
+++ b/account/templates/account/index.html
@@ -2,12 +2,13 @@
 {% block title %}django アカウント操作 サンプル{% endblock %}
 
 {% block content %}
-    <h1>ホーム</h1>
-    <ul>
-        {% if user.is_authenticated %}
-            <li><a href="{% url 'account:logout' %}">{{ user.email }}をログアウト</a></li>
-        {% else %}
-            <li><a href="{% url 'account:login' %}">ログイン</a></li>
-        {% endif %}
-    </ul>
+<h1>ホーム</h1>
+<ul>
+    {% if user.is_authenticated %}
+    <li><a href="{% url 'account:logout' %}">{{ user.email }}をログアウト</a></li>
+    {% else %}
+    <li><a href="{% url 'account:login' %}">ログイン</a></li>
+    {% endif %}
+    <li><a href="{% url 'account:register' %}">ユーザー登録</a></li>
+</ul>
 {% endblock %}
